# AI_CLI_TOOL

./: README.md  pyproject.toml
agent/: chat_handler.py  controller.py  planner.py
cli/: main.py
llm/: ollama_client.py  prompts.py
local_ai_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
memory/: __init__.py  manager.py  session.json  summarizer.py  summary.json  types.py
tools/: diff_tools.py  file_tools.py
