[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-code"
version = "0.1.0"
description = "Local terminal-based AI coding agent powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "rich",
    "requests"
]

[project.scripts]
ai = "cli.main:run"

[tool.setuptools]
packages = ["cli", "agent", "llm", "tools", "memory"]
